backported to use clojure 1.8